# leap_teleoperations

./: CMakeLists.txt  README.md  package.xml
launch/: test.launch  ur5_real.launch  ur5_simu.launch
settings/: jog_settings.yaml  jog_settings_real.yaml
settings/pepper/: left_arm_jog_settings.yaml  right_arm_jog_settings.yaml
src/: dual_armed_robot.py  ur5_single.py
